@@ -10,6 +10,7 @@ BUG: Ticket#860 - Prado::localize() bug (japplegame)
 BUG: Ticket#870 - Callback with redirect breaks lifecycle of page (stever)
 BUG: Ticket#872 - use PATH_SEPARATOR in phpunit.php (fragmaster b)
 ENH: Added Prado.Validation.validateControl(id) on client side to validate a specific control (Michael)
+ENH: Added MessageSource_Database to I18N (uses TDbConnection) (Michael)
 
 Version 3.1.2 April 21, 2008
 ============================
